@@ -1,3 +1,10 @@
+2009-05-06  Johannes Singler  <singler@ira.uka.de>
+
+        PR libstdc++/39546
+        * include/parallel/algo.h (find_switch):
+        Parametrize binder2nd with const T& instead of T.
+        * testsuite/25_algorithms/find/39546.cc: new test case
+
 2009-05-06  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	Revert:
